--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ div {
   border-top-color: #f00;
 }
 #orange {
-  border-top-color: #f00;
+  border-top-color: #ffa500;
 }
 #red {
   border-top-color: #f00;
