Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ div {
   border-top-color: #ffa500;
 }
 #Yellow {
-  border-top-color: #f00;
+  border-top-color: #ff0;
 }
 #red {
   border-top-color: #f00;
