--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ div {
   border-top-color: #ff0;
 }
 #Green {
-  border-top-color: #f00;
+  border-top-color: #00bc3f;
 }
 #red {
   border-top-color: #f00;
