--- a/main.css
+++ b/main.css
@@ -22,9 +22,9 @@ div {
   border-top-color: #00bc3f;
 }
 #Blue {
-  border-top-color: #f00;
+  border-top-color: #06f;
 }
-#red {
+#Indigo {
   border-top-color: #f00;
 }
 #red {
