--- a/main.css
+++ b/main.css
@@ -15,13 +15,13 @@ div {
 #orange {
   border-top-color: #ffa500;
 }
-#Yellow {
+#yellow {
   border-top-color: #ff0;
 }
-#Green {
+#green {
   border-top-color: #00bc3f;
 }
-#Blue {
+#blue {
   border-top-color: #06f;
 }
 #Indigo {
